Add btn new game

--- a/style.css
+++ b/style.css
@@ -45,3 +45,10 @@ h3 {
     margin: 20px;
 }
 
+.btn-jogar{
+  padding: 8px 15px;
+  border: 0;
+  background: var(--primary-color);
+  border-radius: 5px;
+  margin-top: 20px;
+}
